--- a/index.html
+++ b/index.html
@@ -38,12 +38,12 @@
         <div class="city">
             <h1>Blow Moulding Group C</h1>
             <p>Video Terindah</p>
-            <video>
-                <source src="assets/videocpc.mp4" width="30" height="50">
-                </video>
-            <video>
-                <source src="assets/videobukberciwcpc.mp4" width="30" height="20">
-                </video>
+           <video controls>
+    <source src="assets/videocpc.mp4" type="video/mp4" />
+  </video>
+            <video controls>
+    <source src="assets/videobukberciwcpc.mp4" type="video/mp4" />
+  </video>
         <p>
             <p>Foto-foto keseruan bersama</p>
         <p>
