--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
         <div class="city">
             <h1>Blow Moulding Group C</h1>
             <p>Video Terindah</p>
-           <video controls>
+           <video controls width="400">
     <source src="assets/videocpc.mp4" type="video/mp4" />
   </video>
-            <video controls>
+            <video controls width="400">
     <source src="assets/videobukberciwcpc.mp4" type="video/mp4" />
   </video>
         <p>
